[package]
name = "ma_and_pas"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "truckers"
path = "src/producers.rs"

[[bin]]
name = "ma_and_pa"
path = "src/consumers.rs"

[[bin]]
name = "orders"
path = "orders_api/src/main.rs"

[workspace]

members = [
    "surrealdb_test",
    "postgres_test",
    "orders_api"
]

[dependencies]
rdkafka = { version = "0.29.0" }
tokio = { version = "1.19.2", features = ["full"] }
log = "0.4.8"
env_logger = "0.10.0"
chrono = "0.4.0"
actix-web = "4"
async-graphql = "5.0.3"
async-graphql-actix-web = "5.0.3"
serde = "1.0.136"