[package]
name = "chef"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.34.0" }
tokio = { version = "1.19.2", features = ["full"] }
log = "0.4.8"
env_logger = "0.10.0"
chrono = "0.4.0"
random_name_generator = "0.3.6"
