[package]
name = "orders_api"
version = "0.0.1"
edition = "2021"

[dependencies]
rdkafka = { version = "0.29.0" }
tokio = { version = "1.21.2", features = ["full"] }
log = "0.4.8"
env_logger = "0.10.0"
chrono = "0.4.23"
actix-web = "4"
async-graphql = "5.0.3"
async-graphql-actix-web = "5.0.3"
serde = {version = "1.0.137", features = ["derive"] }
tokio-postgres = {version = "0.7.7", features=["with-uuid-1", "with-chrono-0_4"]}
config = "0.13.3"
deadpool-postgres = {version = "0.10.3", features = ["serde"]}
derive_more = "0.99.17"
tracing = "0.1.37"
dotenvy = "0.15.6"
uuid = "1.2.2"