[package]
name = "surrealdb_test"
version = "0.0.1"
edition = "2021"

[dependencies]
surrealdb = "1.0.0-beta.8"
anyhow = "1.0.68"
tokio = { version = "1.19.2", features = ["full"] }
log = "0.4.8"
env_logger = "0.10.0"
surrealdb-rs = { git = "https://github.com/surrealdb/surrealdb.rs", version = "0.1.0" }
serde = "1"
serde_json = "1.0.91"